# EFR

./: .gitignore  CMakeLists.txt  README.md  comb_filter.cpp  comb_filter.h  main.cpp  sort_zip_event.py
configs/: EFR_config.yaml  README.md
